unpackaged/main/default/objects/Quote/fields/Additional_text__c.field-meta.xml
<CustomField>
    <fullName>Additional_text__c</fullName>
    <description>text to be displayed on quote document under Conditions</description>
    <inlineHelpText>text to be displayed on quote document under Conditions</inlineHelpText>
    <label>Additional text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>