unpackaged/main/default/objects/Quote/fields/Badge_Scan_Duration_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Badge_Scan_Duration_On_Site__c</fullName>
    <description>Duration in seconds</description>
    <inlineHelpText>Duration in seconds</inlineHelpText>
    <label>Badge Scan Duration On Site (sec.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>