unpackaged/main/default/objects/Quote/fields/BuildupBreakdown__c.field-meta.xml
<CustomField>
    <fullName>BuildupBreakdown__c</fullName>
    <description>Used on the External Supplier List</description>
    <inlineHelpText>Used on the External Supplier List</inlineHelpText>
    <label>Buildup/Breakdown</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>