unpackaged/main/default/objects/Quote/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>