unpackaged/main/default/objects/Quote/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>Text(Opportunity.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>