unpackaged/main/default/objects/Quote/fields/Percentage_Registering_at_Peak_Moment__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Registering_at_Peak_Moment__c</fullName>
    <label>Percentage Registering at Peak Moment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>