unpackaged/main/default/objects/Quote/fields/Percentage_Visitor_Busiest_Day__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Visitor_Busiest_Day__c</fullName>
    <label>Percentage Visitor Busiest Day</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>