unpackaged/main/default/objects/Quote/fields/PickupFrom__c.field-meta.xml
<CustomField>
    <fullName>PickupFrom__c</fullName>
    <label>Pickup From:</label>
    <type>Date</type>
</CustomField>