unpackaged/main/default/objects/Quote/fields/QuoteVersion__c.field-meta.xml
<CustomField>
    <fullName>QuoteVersion__c</fullName>
    <description>Quote version - based on number of quotes on the same opportunity</description>
    <label>Quote Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>