unpackaged/main/default/objects/Quote/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <description>Used on the External Supplier List</description>
    <inlineHelpText>Used on the External Supplier List</inlineHelpText>
    <label>Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>