unpackaged/main/default/objects/Quote/fields/Waiting_Time_for_PDF__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time_for_PDF__c</fullName>
    <label>Waiting Time</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>