unpackaged/main/default/objects/Quote/recordTypes/EMEA_Visit.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Visit</fullName>
    <active>true</active>
    <description>EMEA Visit Quote</description>
    <label>EMEA Visit</label>
</RecordType>