unpackaged/main/default/objects/Quote/validationRules/EMEA_Visit_Poken_Accepted_Quotes.validationRule-meta.xml
<ValidationRule>
    <fullName>EMEA_Visit_Poken_Accepted_Quotes</fullName>
    <active>true</active>
    <description>Quotes with record type EMEA Visit must have quote line items to have status accepted.</description>
    <errorConditionFormula>AND(RecordTypeId = &#39;0121W0000001HeY&#39;, LineItemCount = 0, ISPICKVAL(Status, &#39;Accepted&#39;) )</errorConditionFormula>
    <errorMessage>Quote must have at least one quote line item before quote can be accepted.</errorMessage>
</ValidationRule>